--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   },
   "dependencies": {
     "@docusaurus/core": "2.1.0",
+    "@docusaurus/plugin-sitemap": "^2.2.0",
     "@docusaurus/preset-classic": "2.1.0",
+    "@docusaurus/theme-search-algolia": "^2.2.0",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.2.1",
+    "dotenv": "^16.0.3",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
